--- a/pages/mnemofs/mideval.mdx
+++ b/pages/mnemofs/mideval.mdx
@@ -17,8 +17,8 @@ From before the start of GSoC till the midterm evaluation, I have made a few con
 - [(`#12661`) Mnemofs Block Allocator](https://github.com/apache/nuttx/pull/12661)
 - [(`#12668`) Mnemofs parent iterator and path methods](https://github.com/apache/nuttx/pull/12668)
 - [(`#12680`) Mnemofs LRU and related CTZ methods](https://github.com/apache/nuttx/pull/12680)
-- [(#) Mnemofs Journal](#)
-- [(#) Mnemofs Master Node](#)
+- [(`#12683`) Mnemofs Journal](https://github.com/apache/nuttx/pull/12683)
+- [(`#12702`) Mnemofs Master Node](https://github.com/apache/nuttx/pull/12702)
 
 The file system is in a basic testable state, however, it's riddled with many bugs that need to be solved. The file system needs to undergo thorough testing to ensure it's reliable.
 
