--- a/pages/mnemofs/mideval.mdx
+++ b/pages/mnemofs/mideval.mdx
@@ -135,7 +135,7 @@ Next, a big thank you to Alan, who's my mentor. Spending so much time patiently 
 
 Also, a big thank you to [Lup](https://github.com/lupyuen) and [Xiang](https://github.com/xiaoxiang781216) who have helped me whenever I approached them with my doubts as well.
 
-Finally, a thank you to my co-contributor Rushabh Gala and my friends whose support helped me cope with everything.
+Finally, a thank you to my friends whose support helped me with everything, and to my co-contributor Rushabh Gala for the support as well.
 
 ---
 
