--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,3 +1,5 @@
+<div style={{textAlign: "justify"}}>
+
 # resyfer's Dev Blog
 
 Hi, I am Saurav Pal, and I code under the name `resyfer`. Here's a blog to share my two cents on stuff.
@@ -19,3 +21,5 @@ I am currently a fresh graduate from the [National Institute of Technology, Silc
 Here are my blogs.
 
 - [mnemofs](./mnemofs/mnemofs)
+
+</div>
