--- a/pages/mnemofs/intro_p1.mdx
+++ b/pages/mnemofs/intro_p1.mdx
@@ -4,6 +4,7 @@ export let prev = "/mnemofs/mnemofs";
 export let next = "/mnemofs/intro_p2";
 export let home = "/";
 
+<div style={{textAlign: "justify"}}>
 # Introduction Part I | mnemofs
 
 So, designing and implementing a file system...it's a daunting task, and very overwhelming as well. BUUUUUT here's me delving into the concepts to the best of my knowledge. Grab a drink or some popcorn as it's going to take a while.
@@ -97,6 +98,7 @@ Inodes are very much optional too, and it depends on the file system on how they
 
 So, we glanced over the basic knowledge required to start learning about file systems. The fun and games end here, and in Part II, it's time to dive into the depths of file systems, and file system development.
 
+</div>
 
 ---
 
