--- a/pages/mnemofs/intro_p2.mdx
+++ b/pages/mnemofs/intro_p2.mdx
@@ -4,6 +4,7 @@ export let prev = "/mnemofs/intro_p1";
 export let home = "/";
 export let next = "/mnemofs/intro_p3";
 
+<div style={{textAlign: "justify"}}>
 # Introduction Part II | mnemofs
 
 We'll dive into an incremental explanation of various concepts involved with file systems and operating systems. It dives into a lot of "suppose" and "what ifs" to try and get you a sense of the problems that lurk in plain sight. Only by recognizing the existence of these problems can people begin to think about trying to solve them.
@@ -135,6 +136,8 @@ This is a very simplified and generalized way in which OS, FS, and devices inter
 ## Conclusion
 
 Here we learnt how FS interacts with the OS, and in Part III, we'll dive into FS and the various solutions that have emerged through the decades to an apparently "simple problem."
+
+</div>
 
 ---
 
