--- a/pages/mnemofs/intro_p3.mdx
+++ b/pages/mnemofs/intro_p3.mdx
@@ -4,6 +4,9 @@ export let prev = "/mnemofs/intro_p2";
 export let home = "/";
 export let next = "/mnemofs/lru";
 
+
+<div style={{textAlign: "justify"}}>
+
 # Introduction Part III | mnemofs
 
 File systems have existed for almost as long as storage mediums have, which is to say, decades. File systems started out very simple. As the needs of users increased, as operating systems evolved, and as the quirks of storage mediums increased in exchange for providing maximum efficiency under very specific conditions, file systems had to adapt, and they generally became more complex but more specific.
@@ -105,6 +108,8 @@ The amount of extra space used by old copies is determined by the aggressiveness
 There are too many types of file systems, and there are too many problems. They try to solve some problem but end up creating another or solving it partially. Mnemofs is heavily inspired by littlefs, which itself tries to take the best of both CoW and journaling file systems and combine them with some ingenious problem solving.
 
 We'll look into mnemofs, and specifically, its LRU in the next part.
+
+</div>
 
 ---
 
