--- a/pages/mnemofs/journal.mdx
+++ b/pages/mnemofs/journal.mdx
@@ -4,6 +4,8 @@ export let prev = "/mnemofs/lru";
 export let home = "/";
 export let next = "/mnemofs/mn";
 
+<div style={{textAlign: "justify"}}>
+
 # Mnemofs's Journal
 
 Continuing a reoccurring theme, to understand this, we need to understand something else. Since the journal stores updated information about a file or a directory, first we need to look into how mnemofs stores a file or a directory.
@@ -51,6 +53,8 @@ The first ``n`` blocks (out of the ``n + 2`` blocks) store the logs, and once fu
 ## Conclusion
 
 So, this is how the journal works, and the "more on that later" parts will be explained in the next section that discusses the master node of mnemofs.
+
+</div>
 
 ---
 
