--- a/pages/mnemofs/mideval.mdx
+++ b/pages/mnemofs/mideval.mdx
@@ -4,6 +4,8 @@ export let prev = "/mnemofs/mn";
 export let home = "/";
 export let next = "/coming_soon";
 
+<div style={{textAlign: "justify"}}>
+
 # Google Summer of Code '24 @ Apache NuttX, Mid-Term Evaluation Blog
 
 Hi! I am Saurav Pal, a recent graduate, and a regular passionate developer interested in systems and anything low-level. I welcome you to my blog, which covers my contributions and journey as a Google Summer of Code (GSoC) Contributor for Apache NuttX in 2024, from the very start to the end. My project involves designing and implementing mnemofs, a NAND Flash File System for Apache NuttX.
@@ -136,6 +138,8 @@ Next, a big thank you to Alan, who's my mentor. Spending so much time patiently 
 Also, a big thank you to [Lup](https://github.com/lupyuen) and [Xiang](https://github.com/xiaoxiang781216) who have helped me whenever I approached them with my doubts as well.
 
 Finally, a thank you to my friends whose support helped me with everything, and to my co-contributor Rushabh Gala for the support as well.
+
+</div>
 
 ---
 
