--- a/pages/mnemofs/mn.mdx
+++ b/pages/mnemofs/mn.mdx
@@ -4,6 +4,8 @@ export let prev = "/mnemofs/journal";
 export let home = "/";
 export let next = "/mnemofs/ba";
 
+<div style={{textAlign: "justify"}}>
+
 # Mnemofs's Master Node
 
 The master node in mnemofs is the entity that can be used to get the location of the root of the file system.
@@ -21,6 +23,8 @@ The master blocks contain multiple master nodes. When the first `n` blocks of th
 ## Conclusion
 
 Here you saw how the journal of mnemofs works. Now, moving on to the block allocator.
+
+</div>
 
 ---
 
