--- a/pages/mnemofs/lru.mdx
+++ b/pages/mnemofs/lru.mdx
@@ -4,6 +4,7 @@ export let prev = "/mnemofs/mnemofs";
 export let home = "/";
 export let next = "/mnemofs/journal";
 
+<div style={{textAlign: "justify"}}>
 
 # Mnemofs Least Recently Used (LRU) Cache
 
@@ -53,7 +54,9 @@ When it's time to update convert the deltas into actual data on the flash, it's 
 
 Now, we need to apply all updates contained in the deltas over such a file. Due to the limitation of the types of deltas, this gets much simplified into a two pointer method, where the upper limiter of the window shifts inwards by `x` bytes for every deletion that shifts `x` bytes **inside** the window. It might shift `x + y` bytes in total, where `y` bytes fall outside the window. The way this two pointer window algorithm works, `y` will not be lower than the minimum limiter of the window, but rather, can only be higher that the upper limiter. We do not care about this, as the next iteration will take care of it. Also, we increment a deleted bytes counter...say `del`...by `x` to denote how many bytes have been deleted **before** the start of the window. So, then, if we are considering a window `x, x + m` in the new file, then we need to copy the bytes `x + del, x + m + del` from the old file. This way `del` marks the amount of "compensation" we need to provide.
 
-After the window reaches the end of updates, it's time to save this new                                         location in our journal.
+After the window reaches the end of updates, it's time to save this new location in our journal.
+
+</div>
 
 ---
 
