--- a/pages/mnemofs/mnemofs.mdx
+++ b/pages/mnemofs/mnemofs.mdx
@@ -1,3 +1,5 @@
+<div style={{textAlign: "justify"}}>
+
 # mnemofs
 
 Mnemofs is a NAND Flash File System designed and built for NuttX as part of the [Google Summer of Code 2024 program](https://lists.apache.org/thread/vnlyzosgp3rbc9jqf64np126rjhntmrq). Mnemofs is designed to take a middle ground between flash storage consumption, memory consumption, wear and speed. It sacrifices a little bit of everything, and ends up being acceptably good in all of them, instead of sacrificing multiple aspects, and being good in one.
@@ -17,3 +19,5 @@ Here are the blogs that cover this in depth:
 - [GSoC '24 @ Apache NuttX, Mid Term Evaluation Blogs](./mideval)
 
 The journey to design and implement this wasn't smooth sailing, and required modifications pretty frequently to either make the FS faster in some respect, or to patch up gaping holes in its logic. All of this will be covered in the [mid term](./mideval) and [end term](../coming_soon) blogs for my time as a GSoC Contributor for Apache NuttX.
+
+</div>
