--- a/pages/mnemofs/mideval.mdx
+++ b/pages/mnemofs/mideval.mdx
@@ -1,8 +1,8 @@
 import { Cards, Callout, Card } from 'nextra/components'
 
-export let prev = "/mnemofs/mn";
+export let prev = "/mnemofs/ba";
 export let home = "/";
-export let next = "/coming_soon";
+export let next = "/mnemofs/endeval";
 
 <div style={{textAlign: "justify"}}>
 
@@ -144,7 +144,7 @@ Finally, a thank you to my friends whose support helped me with everything, and 
 ---
 
 <Cards>
-<Card icon="❰&emsp;" title="Mnemofs Master Node" href={prev} />
+<Card icon="❰&emsp;" title="Mnemofs Block Allocator" href={prev} />
 <Card icon="❱&emsp;" title="GSoC '24 @ Apache NuttX, End Evaluation Blog" href={next} />
 </Cards>
 <br/>
