--- a/pages/mnemofs/mnemofs.mdx
+++ b/pages/mnemofs/mnemofs.mdx
@@ -16,7 +16,8 @@ Here are the blogs that cover this in depth:
 - [Mnemofs Journal](./journal)
 - [Mnemofs Master Node](./mn)
 - [Mnemofs Block Allocator](./ba)
-- [GSoC '24 @ Apache NuttX, Mid Term Evaluation Blogs](./mideval)
+- [GSoC '24 @ Apache NuttX, Mid Term Evaluation Blog](./mideval)
+- [Google Summer of Code '24 @ Apache NuttX Final Report](./endeval)
 
 The journey to design and implement this wasn't smooth sailing, and required modifications pretty frequently to either make the FS faster in some respect, or to patch up gaping holes in its logic. All of this will be covered in the [mid term](./mideval) and [end term](../coming_soon) blogs for my time as a GSoC Contributor for Apache NuttX.
 
