--- a/pages/mnemofs/endeval.mdx
+++ b/pages/mnemofs/endeval.mdx
@@ -280,6 +280,7 @@ My contribution was to implement mnemofs to a working state. It's not feature co
 - [#12808 fs/mnemofs: Refactoring path logic, direntry size bug fix, open free bug fix](https://github.com/apache/nuttx/pull/12808)
 - [#12937 fs/mnemofs: Fix journal log rw issue, rw size issue](https://github.com/apache/nuttx/pull/12937)
 - [#12943 fs/mnemofs: Autoformat](https://github.com/apache/nuttx/pull/12943)
+- [#13147 docs/fs/mnemofs: Update new design and NAND flash structure](https://github.com/apache/nuttx/pull/13147)
 
 Further, before GSoC, I've made some contributions while getting started with the codebase:
 
