--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -10,16 +10,17 @@ I'm an enthusiastic developer who's open to learning anything and everything rel
 
 I am a Google Summer of Code 2024 (GSoC '24') contributor to Apache organization in which I am working on [designing and implementing mnemofs, which is a filesystem for NAND Flashes for the Apache NuttX Real Time Operating System (RTOS)](https://summerofcode.withgoogle.com/programs/2024/projects/JISwnjR5).
 
-I'm also currently an upcoming Associate Software Engineer at Oracle.
+I'm an Associate Software Engineer at Oracle in the PSG DevOps team at Hyderabad.
 
 I was also a GSoC '23 contributor to PostgreSQL as well, working on [improving PostgreSQL version support for pgexporter](https://summerofcode.withgoogle.com/archive/2023/projects/Djrl5w5B).
 
-I am currently a fresh graduate from the [National Institute of Technology, Silchar](http://www.nits.ac.in/), which is one of the [Institutions of National Importance in India](https://www.education.gov.in/institutions-national-importance), in which I was pursing a Bachelor of Technology (B. Tech.) in Computer Science and Engineering (CSE) for 4 years (from Nov 2020 - May 2024).
+I am a graduate from the [National Institute of Technology, Silchar](http://www.nits.ac.in/), which is one of the [Institutions of National Importance in India](https://www.education.gov.in/institutions-national-importance), in which I was pursing a Bachelor of Technology (B. Tech.) in Computer Science and Engineering (CSE) for 4 years (from Nov 2020 - May 2024).
 
 ## Blogs
 
 Here are my blogs.
 
+- [Embedded Systems](./embedded/embedded)
 - [mnemofs](./mnemofs/mnemofs)
 
 </div>
